--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8"/>
 <title>Document</title>
 </head>
-<body>
-<h1>Exemplo de HTML para GitHub</h1>>
-<h2>Exemplo de HTML para GitHub</h2>>
-</body>
+    <body>
+        <h1>Exemplo de HTML para GitHub</h1>
+        <h2>Exemplo de HTML para GitHub</h2>
+    </body>
 </html>
