--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Exemplo de HTML para GitHub</h1>
         <h2>Exemplo de HTML para GitHub</h2>
+        <h3>Exemplo de HTML para GitHub</h3>
     </body>
 </html>
